2002-03-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* prelude-lml.conf.in (file): 
	now that we are able to have the same entry with different
	value several time in config file (libprelude), add new file
	to monitor.

2002-03-28  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* plugins/simple/simple.c: include <inttypes.h> and <sys/types.h>
	(needed for libprelude/* on FreeBSD)

2002-03-28  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/lml-alert.c (lml_emit_alert): 
	fill in more informations... Still many work to do.

	* src/file-server.c (read_file): 
	remove debugging printf().

	* src/udp-server.c (udp_server_standalone): 
	use a bigger buffer. We don't want to rely on ethernet stuff.

	* plugins/pax/pax.c (pax_log_processing): 
	* plugins/simple/simple.c (emit_alert): 
	use lml_emit_alert().

	* src/lml-alert.c: 
	new file providing facility for alert emition.
	Every plugin should use theses functions.

	* plugins/simple/simple.c: 

	This is the start of the Simple plugin. This plugin
	have a ruleset, composed of regex, and of information
	to fill in the alert if the regex match.

2002-03-28  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* plugins/debug/debug.c: revert to including <inttypes.h> instead of
	<stdint.h> for compatibility with FreeBSD 4.x and conformance
	with other Prelude modules. 

2002-03-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/hashkey.c (hash_position): 
	cast to unsigned int, lot of cleanup.

	* src/file-server.c (file_server_monitor_file): 
	take an already open FD as argument (so that we don't 
	require root access here).

	* src/udp-server.c (udp_server_start): 
	reader and queue are passed to udp_server_start,
	not udp_server new.

	* src/pconfig.c (pconfig_set): 
	new -u (--user) option. Prelude LML can now run as a
	simple user.

	* src/udp-server.c (udp_server_new): 
	resolve the provided address if any. Else use INADDR_ANY.

	* src/pconfig.c (pconfig_set): 