@@ -1,5 +1,9 @@
 2002-03-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
 
+	* src/server-logic.c (server_logic_process_requests): 
+	(child_reader): don't accept connection before the thread
+	install the signal handler for SIGUSR1.
+
 	* prelude-lml.conf.in (file): 
 	now that we are able to have the same entry with different
 	value several time in config file (libprelude), add new file
